--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 *.large-file-extension filter=lfs diff=lfs merge=lfs -text
+*.webm filter=lfs diff=lfs merge=lfs -text
+limo.webm filter=lfs diff=lfs merge=lfs -text
