--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-autoplay": "^8.3.0",
-    "embla-carousel-react": "^8.3.0",
+    "embla-carousel-react": "^8.3.1",
     "geist": "^1.3.1",
     "lucide-react": "^0.447.0",
     "next": "14.2.14",
@@ -31,6 +31,7 @@
     "react-countup": "^6.5.3",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
+    "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.53.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
