--- a/.env
+++ b/.env
@@ -1,9 +1,3 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
 POSTGRES_URL="postgres://default:ajDTksQr0z1J@ep-steep-rice-a59ajjg7-pooler.us-east-2.aws.neon.tech:5432/verceldb?sslmode=require"
 POSTGRES_PRISMA_URL="postgres://default:ajDTksQr0z1J@ep-steep-rice-a59ajjg7-pooler.us-east-2.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
 POSTGRES_URL_NO_SSL="postgres://default:ajDTksQr0z1J@ep-steep-rice-a59ajjg7-pooler.us-east-2.aws.neon.tech:5432/verceldb"
@@ -12,3 +6,6 @@ POSTGRES_USER="default"
 POSTGRES_HOST="ep-steep-rice-a59ajjg7-pooler.us-east-2.aws.neon.tech"
 POSTGRES_PASSWORD="ajDTksQr0z1J"
 POSTGRES_DATABASE="verceldb"
+
+NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=AIzaSyBplVr1UhWuCE9MOsSeyO-_lquuKcr0r_w
+NEXT_PUBLIC_GOOGLE_MAPS_MAP_ID=5ef00aebcc8d4a53
