--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
     "date-fns": "^3.6.0",
     "embla-carousel-autoplay": "^8.3.0",
     "embla-carousel-react": "^8.3.1",
+    "framer-motion": "^11.12.0",
     "geist": "^1.3.1",
     "lucide-react": "^0.447.0",
     "next": "14.2.14",
-    "react-countup": "^6.5.3",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.5",
