--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.53.0",
     "react-loading-skeleton": "^3.5.0",
+    "resend": "^4.0.1",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.3",
