--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.3",
     "@react-google-maps/api": "^2.20.3",
     "@vercel/postgres": "^0.10.0",
     "@vis.gl/react-google-maps": "^1.4.0",
